[package]
name = "transmuter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "transmuter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
vipers = "1.5.9"
gem_bank = {git = "https://github.com/gemworks/gem-farm", features = ["cpi"]}
uint = "=0.9.1"
solana-program = "=1.8.14"