[package]
name = "transmuter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "transmuter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
vipers = "1.5.9"
gem_bank = {git = "https://github.com/gemworks/gem-farm", features = ["no-entrypoint", "cpi"]}
spl-math = { version = "0.1.0", features = ["no-entrypoint"] }
spl-token = "3.3.0"
